--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.wesjd</groupId>
     <artifactId>anvilgui-parent</artifactId>
-    <version>1.9.0-SNAPSHOT</version>
+    <version>1.9.0.1-kami</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -57,30 +57,30 @@
          to install -->
         <defaultGoal>clean install</defaultGoal>
         <plugins>
-            <plugin>
-                <groupId>com.diffplug.spotless</groupId>
-                <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.22.8</version>
-                <inherited>false</inherited> <!-- Only need to run once for the whole project -->
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <phase>compile</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <java>
-                        <includes>
-                            <include>**/*.java</include>
-                        </includes>
-                        <palantirJavaFormat/>
-                        <removeUnusedImports/>
-                        <importOrder/>
-                    </java>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.diffplug.spotless</groupId>-->
+<!--                <artifactId>spotless-maven-plugin</artifactId>-->
+<!--                <version>2.22.8</version>-->
+<!--                <inherited>false</inherited> &lt;!&ndash; Only need to run once for the whole project &ndash;&gt;-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                        <phase>compile</phase>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <java>-->
+<!--                        <includes>-->
+<!--                            <include>**/*.java</include>-->
+<!--                        </includes>-->
+<!--                        <palantirJavaFormat/>-->
+<!--                        <removeUnusedImports/>-->
+<!--                        <importOrder/>-->
+<!--                    </java>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
         <pluginManagement>
             <plugins>
