--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.wesjd</groupId>
     <artifactId>anvilgui-parent</artifactId>
-    <version>1.9.0.1-kami</version>
+    <version>1.9.0.9-kami</version> <!-- Must replace all instances -->
     <packaging>pom</packaging>
 
     <properties>
